# geno_vae

./: .gitignore  README.md  pyproject.toml
configs/: example.yaml
src/geno_vae/: config.py  data.py  metrics.py  model.py  plotting.py  train.py
